[tool.poetry]
name = "streamlit-canary"
version = "0.1.0b13"
description = "LK-flavored Streamlit enhancements."
homepage = "https://github.com/likianta/streamlit-canary"
authors = ["Likianta <likianta@foxmail.com>"]
# readme = "README.md"
packages = [{ include = "streamlit_canary" }]

[tool.poetry.dependencies]
python = "^3.8"
argsense = { version = "^1.0.1b2", source = "likianta" }
# lk-logger = { version = "^6.0.0a16", source = "likianta" }
lk-utils = { version = "^3.3.0a17", source = "likianta" }
# lk-utils = { version = "^3.3.0a7", source = "likianta" }
psutil = "^7.0.0"
pyapp-window = { version = "^2.2.0b4", source = "likianta" }
streamlit = [
    { version = "^1.40.0", python = ">=3.8,<3.10,!=3.9.7" },
    { version = "^1.45.0", python = ">=3.10,<4.0" },
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
