[project]
name = "streamlit-canary"
version = "0.1.0"
description = "LK-flavored Streamlit components."
license = "MIT"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
# readme = "README.md"
packages = [{ include = "streamlit_canary" }]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/likianta/streamlit-canary"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^1.0.1"
lk-utils = "^3.2.1"
psutil = "^7.0.0"
pyapp-window = "^2.1.3"
streamlit = [
    { version = "^1.45.0", python = ">=3.10,<4.0" },
    { version = "^1.40.0", python = ">=3.8,<3.10,!=3.9.7" },
]

[tool.poetry.group.dev.dependencies]
argsense = { version = "^1.0.1", source = "likianta" }
lk-utils = { version = "^3.3.0a17", source = "likianta" }
pyapp-window = { version = "^2.2.0b4", source = "likianta" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
